Add Client by ID endpoint
